// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePasswordForm> with password 1`] = `
<div
  id="client-test-div"
>
  <Component
    idPrefix="test"
    labelsFirst={false}
    onSuccess={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <Formik
      initialValues={
        Object {
          "email": undefined,
          "newPassword": "",
          "oldPassword": "",
        }
      }
      onSubmit={[Function]}
      validate={[Function]}
    >
      <Form>
        <form
          action="#"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="form-label-group"
          >
            <Component
              flip={false}
            >
              <Field
                autoFocus={true}
                className="form-control"
                id="test-change-password-old-password"
                key=".0"
                name="oldPassword"
                placeholder="Old Password"
                required={true}
                type="password"
              >
                <input
                  autoFocus={true}
                  className="form-control"
                  id="test-change-password-old-password"
                  name="oldPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Old Password"
                  required={true}
                  type="password"
                  value="hunter2"
                />
              </Field>
              <label
                htmlFor="test-change-password-old-password"
                key=".1"
              >
                Old Password
              </label>
            </Component>
          </div>
          <div
            className="form-label-group"
          >
            <Component
              flip={false}
            >
              <Field
                className="form-control"
                id="test-change-password-new-password"
                key=".0"
                name="newPassword"
                placeholder="New Password"
                required={true}
                type="password"
              >
                <input
                  className="form-control"
                  id="test-change-password-new-password"
                  name="newPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="New Password"
                  required={true}
                  type="password"
                  value="hunter3"
                />
              </Field>
              <label
                htmlFor="test-change-password-new-password"
                key=".1"
              >
                New Password
              </label>
            </Component>
          </div>
          <DebouncedPasswordScore
            password="hunter3"
            username="bob@bob.com"
          >
            <Component
              password="hunter3"
              username="bob@bob.com"
            />
          </DebouncedPasswordScore>
          <button
            className="btn btn-lg btn-primary "
            type="submit"
          >
            Change Password
          </button>
          <ErrorMessage />
        </form>
      </Form>
    </Formik>
  </Component>
</div>
`;

exports[`<ChangePasswordForm> without password 1`] = `
<div
  id="client-test-div"
>
  <Component
    idPrefix="test"
    labelsFirst={false}
    onSuccess={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <Formik
      initialValues={
        Object {
          "email": "bob@bob.com",
          "newPassword": "",
          "oldPassword": undefined,
        }
      }
      onSubmit={[Function]}
      validate={[Function]}
    >
      <Form>
        <form
          action="#"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="form-label-group"
          >
            <Component
              flip={false}
            >
              <Field
                className="form-control"
                id="test-change-password-email"
                key=".0"
                name="email"
                placeholder="email"
                required={true}
                type="text"
              >
                <input
                  className="form-control"
                  id="test-change-password-email"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="email"
                  required={true}
                  type="text"
                  value="bob@bob.com"
                />
              </Field>
              <label
                htmlFor="test-change-password-email"
                key=".1"
              >
                Email
              </label>
            </Component>
          </div>
          <div
            className="form-label-group"
          >
            <Component
              flip={false}
            >
              <Field
                autoFocus={true}
                className="form-control"
                id="test-change-password-new-password"
                key=".0"
                name="newPassword"
                placeholder="New Password"
                required={true}
                type="password"
              >
                <input
                  autoFocus={true}
                  className="form-control"
                  id="test-change-password-new-password"
                  name="newPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="New Password"
                  required={true}
                  type="password"
                  value="hunter3"
                />
              </Field>
              <label
                htmlFor="test-change-password-new-password"
                key=".1"
              >
                New Password
              </label>
            </Component>
          </div>
          <DebouncedPasswordScore
            password="hunter3"
            username="bob@bob.com"
          >
            <Component
              password="hunter3"
              username="bob@bob.com"
            />
          </DebouncedPasswordScore>
          <button
            className="btn btn-lg btn-primary "
            type="submit"
          >
            Set Password
          </button>
          <ErrorMessage />
        </form>
      </Form>
    </Formik>
  </Component>
</div>
`;

exports[`<LoginForm> login 1`] = `
<div
  id="client-test-div"
>
  <Component
    idPrefix="test"
    onLogin={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <Component
      onLogin={[Function]}
    >
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      />
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="test-login-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="test-login-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="test-login-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value="bob@bob.com"
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="test-login-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="test-login-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="test-login-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value="hunter2"
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="test-login-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={true}
                  className="custom-control-input"
                  id="test-login-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={true}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="test-login-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <div
              className="mb-3 justify-content-between d-flex"
            >
              <button
                className="btn btn-primary"
                id="login-button"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn btn-outline-primary"
                id="forgot-pw-button"
                onClick={[Function]}
                type="button"
              >
                Forgot Password?
              </button>
            </div>
            <ErrorMessage />
          </form>
        </Form>
      </Formik>
    </Component>
  </Component>
</div>
`;

exports[`<LoginForm>/<AccountCreationForm> forgot password 1`] = `
<div
  id="client-test-div"
>
  <Component
    idPrefix="test"
  >
    <Component
      onLogin={[Function]}
    >
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      />
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="test-login-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="test-login-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="test-login-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="test-login-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="test-login-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="test-login-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="test-login-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="test-login-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="test-login-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <div
              className="mb-3 justify-content-between d-flex"
            >
              <button
                className="btn btn-primary"
                id="login-button"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn btn-outline-primary"
                id="forgot-pw-button"
                onClick={[Function]}
                type="button"
              >
                Forgot Password?
              </button>
            </div>
            <ErrorMessage />
          </form>
        </Form>
      </Formik>
    </Component>
  </Component>
  <Component>
    <Component>
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      />
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="um3kfiekd-account-creation-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="um3kfiekd-account-creation-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="um3kfiekd-account-creation-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="um3kfiekd-account-creation-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="um3kfiekd-account-creation-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="um3kfiekd-account-creation-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="um3kfiekd-account-creation-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <Component
              password=""
              username=""
            />
            <div
              className="mb-3"
            >
              <button
                className="btn btn-primary"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
        </Form>
      </Formik>
      <UserCreateError />
    </Component>
  </Component>
</div>
`;

exports[`<LoginForm>/<AccountCreationForm> forgot password 2`] = `
<div
  id="client-test-div"
>
  <Component
    idPrefix="test"
  >
    <div>
      <div>
        Enter your email to get a password reset link.
      </div>
      <Component
        idPrefix="test"
        labelsFirst={true}
        onCancel={[Function]}
      >
        <Formik
          initialValues={
            Object {
              "email": "",
            }
          }
          onSubmit={[Function]}
          validate={[Function]}
        >
          <ErrorMessage />
          <Form
            id="test-request-password-reset-form"
          >
            <form
              action="#"
              id="test-request-password-reset-form"
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <div
                className="form-label-group mb-2"
              >
                <Component
                  flip={true}
                >
                  <label
                    htmlFor="test-request-password-reset-email"
                    key=".1"
                  >
                    Email address
                  </label>
                  <Field
                    autoFocus={true}
                    className="form-control"
                    id="test-request-password-reset-email"
                    key=".0"
                    name="email"
                    placeholder="Email address"
                    required={true}
                    type="email"
                  >
                    <input
                      autoFocus={true}
                      className="form-control"
                      id="test-request-password-reset-email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Email address"
                      required={true}
                      type="email"
                      value=""
                    />
                  </Field>
                </Component>
              </div>
              <div
                className="d-flex justify-content-between mb-3"
              >
                <button
                  className="btn btn-primary "
                  id="request-pw-reset-button"
                  type="submit"
                >
                  Submit
                </button>
                <button
                  className="btn btn-outline-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </form>
          </Form>
        </Formik>
      </Component>
    </div>
  </Component>
  <Component>
    <Component>
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      />
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="um3kfiekd-account-creation-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="um3kfiekd-account-creation-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="um3kfiekd-account-creation-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="um3kfiekd-account-creation-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="um3kfiekd-account-creation-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="um3kfiekd-account-creation-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="um3kfiekd-account-creation-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <Component
              password=""
              username=""
            />
            <div
              className="mb-3"
            >
              <button
                className="btn btn-primary"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
        </Form>
      </Formik>
      <UserCreateError />
    </Component>
  </Component>
</div>
`;

exports[`<LoginForm>/<AccountCreationForm> oauth 1`] = `
<div
  id="client-test-div"
>
  <Component>
    <Component
      onLogin={[Function]}
    >
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      >
        <div
          className="my-3"
        >
          <style>
            
          .facebook-login-btn-3kdic7az9 {
            color: white !important;
            background-color: #4267b2 !important;
            border-color: #4267b2 !important;
          }
          .facebook-login-btn-3kdic7az9:hover {
            color: #4267b2 !important;
            background-color: white !important;
          }

          .google-login-btn-3kdic7az9 {
            color: white !important;
            background-color: #ea4335 !important;
            border-color: #ea4335 !important;
          }
          .google-login-btn-3kdic7az9:hover {
            color: #ea4335 !important;
            background-color: white !important;
          }

          .github-login-btn-3kdic7az9 {
            color: white !important;
            background-color: rgb(21, 20, 19) !important;
            border-color: rgb(21, 20, 19) !important;
          }
          .github-login-btn-3kdic7az9:hover {
            color: rgb(21, 20, 19) !important;
            background-color: white !important;
          }
      
          </style>
          <SocialLoginButton
            buttonClasses="github-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between github-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <GithubLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </GithubLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with GitHub
                </div>
              </button>
            </div>
          </SocialLoginButton>
          <SocialLoginButton
            buttonClasses="facebook-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between facebook-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <FbLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </FbLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with Facebook
                </div>
              </button>
            </div>
          </SocialLoginButton>
          <SocialLoginButton
            buttonClasses="google-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between google-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <GoogleLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </GoogleLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with Google
                </div>
              </button>
            </div>
          </SocialLoginButton>
        </div>
      </SocialButtons>
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-login-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="um3kfiekd-login-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="um3kfiekd-login-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-login-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="um3kfiekd-login-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="um3kfiekd-login-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="um3kfiekd-login-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="um3kfiekd-login-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="um3kfiekd-login-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <div
              className="mb-3 justify-content-between d-flex"
            >
              <button
                className="btn btn-primary"
                id="login-button"
                type="submit"
              >
                Sign in
              </button>
              <button
                className="btn btn-outline-primary"
                id="forgot-pw-button"
                onClick={[Function]}
                type="button"
              >
                Forgot Password?
              </button>
            </div>
            <ErrorMessage />
          </form>
        </Form>
      </Formik>
    </Component>
  </Component>
  <Component>
    <Component>
      <SocialButtons
        className="my-3"
        popupWindow={
          Object {
            "close": [Function],
            "open": [Function],
          }
        }
      >
        <div
          className="my-3"
        >
          <style>
            
          .facebook-login-btn-3kdic7az9 {
            color: white !important;
            background-color: #4267b2 !important;
            border-color: #4267b2 !important;
          }
          .facebook-login-btn-3kdic7az9:hover {
            color: #4267b2 !important;
            background-color: white !important;
          }

          .google-login-btn-3kdic7az9 {
            color: white !important;
            background-color: #ea4335 !important;
            border-color: #ea4335 !important;
          }
          .google-login-btn-3kdic7az9:hover {
            color: #ea4335 !important;
            background-color: white !important;
          }

          .github-login-btn-3kdic7az9 {
            color: white !important;
            background-color: rgb(21, 20, 19) !important;
            border-color: rgb(21, 20, 19) !important;
          }
          .github-login-btn-3kdic7az9:hover {
            color: rgb(21, 20, 19) !important;
            background-color: white !important;
          }
      
          </style>
          <SocialLoginButton
            buttonClasses="github-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between github-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <GithubLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M768 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zM291 1231q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zM322 1265q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zM352 1310q9-7 0-19-8-13-17-6-9 5 0 18t17 7zM394 1352q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zM451 1377q3-11-13-16-15-4-19 7t13 15q15 6 19-6zM514 1382q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zM572 1372q-2-11-18-9-16 3-14 15t18 8 14-14z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </GithubLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with GitHub
                </div>
              </button>
            </div>
          </SocialLoginButton>
          <SocialLoginButton
            buttonClasses="facebook-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between facebook-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <FbLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M1451 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </FbLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with Facebook
                </div>
              </button>
            </div>
          </SocialLoginButton>
          <SocialLoginButton
            buttonClasses="google-login-btn-3kdic7az9"
            onClick={[Function]}
          >
            <div
              className="d-flex justify-content-center my-2"
            >
              <button
                className="btn btn-block btn-outline-primary d-flex align-items-center justify-content-between google-login-btn-3kdic7az9"
                onClick={[Function]}
              >
                <GoogleLogo
                  size="2em"
                >
                  <Icon
                    fill="currentColor"
                    icon={
                      Object {
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "d": "M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z",
                            },
                            "name": "path",
                          },
                        ],
                        "viewBox": "0 0 1536 1792",
                      }
                    }
                    size="2em"
                    tag="i"
                  >
                    <i
                      fill="currentColor"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <SvgIcon
                        icon={
                          Object {
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "d": "M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z",
                                },
                                "name": "path",
                              },
                            ],
                            "viewBox": "0 0 1536 1792",
                          }
                        }
                        size="2em"
                      >
                        <svg
                          fill="currentColor"
                          height="2em"
                          style={
                            Object {
                              "display": "inline-block",
                              "verticalAlign": "middle",
                            }
                          }
                          viewBox="0 0 1536 1792"
                          width="2em"
                        >
                          <path
                            d="M768 786h725q12 67 12 128 0 217-91 387.5t-259.5 266.5-386.5 96q-157 0-299-60.5t-245-163.5-163.5-245-60.5-299 60.5-299 163.5-245 245-163.5 299-60.5q300 0 515 201l-209 201q-123-119-306-119-129 0-238.5 65t-173.5 176.5-64 243.5 64 243.5 173.5 176.5 238.5 65q87 0 160-24t120-60 82-82 51.5-87 22.5-78h-436v-264z"
                            key="0"
                          />
                        </svg>
                      </SvgIcon>
                    </i>
                  </Icon>
                </GoogleLogo>
                <div
                  className="flex-grow-1 font-weight-bold"
                >
                  Login with Google
                </div>
              </button>
            </div>
          </SocialLoginButton>
        </div>
      </SocialButtons>
      <Formik
        initialValues={
          Object {
            "email": "",
            "password": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-email"
                  key=".1"
                >
                  Email address
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="um3kfiekd-account-creation-email"
                  key=".0"
                  name="email"
                  placeholder="Email address"
                  required={true}
                  type="email"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="um3kfiekd-account-creation-email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Email address"
                    required={true}
                    type="email"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="form-label-group mb-2"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="um3kfiekd-account-creation-password"
                  key=".1"
                >
                  Password
                </label>
                <Field
                  className="form-control"
                  id="um3kfiekd-account-creation-password"
                  key=".0"
                  name="password"
                  placeholder="Password"
                  required={true}
                  type="password"
                >
                  <input
                    className="form-control"
                    id="um3kfiekd-account-creation-password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-2"
            >
              <Field
                className="custom-control-input"
                id="um3kfiekd-account-creation-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="um3kfiekd-account-creation-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="um3kfiekd-account-creation-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <Component
              password=""
              username=""
            />
            <div
              className="mb-3"
            >
              <button
                className="btn btn-primary"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
        </Form>
      </Formik>
      <UserCreateError />
    </Component>
  </Component>
</div>
`;

exports[`<ReauthenticateGuard> 1`] = `
<div
  id="client-test-div"
>
  <Component
    tokenContents="a token"
  >
    <div>
      <ErrorMessage />
      <div
        className="mb-3"
      >
        Please enter your password:
      </div>
      <Formik
        initialValues={
          Object {
            "password": "",
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form
          id="reauth-guard-form"
        >
          <form
            action="#"
            id="reauth-guard-form"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group"
            >
              <Field
                autoFocus={true}
                className="form-control"
                id="reauth-guard-password"
                name="password"
                placeholder="password"
                type="password"
              >
                <input
                  autoFocus={true}
                  className="form-control"
                  id="reauth-guard-password"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="password"
                  type="password"
                  value=""
                />
              </Field>
            </div>
            <div
              className="d-flex justify-content-between"
            >
              <button
                className="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
              <button
                className="btn btn-secondary"
                onClick={[Function]}
              >
                Cancel
              </button>
            </div>
          </form>
        </Form>
      </Formik>
    </div>
  </Component>
</div>
`;

exports[`<ReauthenticateGuard> 2`] = `
<div
  id="client-test-div"
>
  <Component
    tokenContents="a token"
  >
    <GuardedComponent>
      <div>
        token: 
        {"id":"915cb3c0-a3ac-44be-a2a8-6edb25bfeacc","userContents":"\\"a token\\"","reauthenticationMethods":["password"],"iat":42}
      </div>
    </GuardedComponent>
  </Component>
</div>
`;

exports[`<ResetPasswordForm> 1`] = `
<div
  id="client-test-div"
>
  <Component
    allowLoginAfterReset={true}
    idPrefix="test"
    onLogin={[MockFunction]}
    token="eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJlbWFpbCI6ImJvYkBib2IuY29tIiwiY3JlZGVudGlhbElkIjoiYTMxZDY4ZTYtODk4Zi00OTk4LTllNmQtMjVlZjFhNjJmNjJjIiwiaWQiOiI5MTVjYjNjMC1hM2FjLTQ0YmUtYTJhOC02ZWRiMjViZmVhY2MiLCJhcHBJZCI6IjI0OGU1NDczLWQ5YTYtNDQ4Ny05MTY0LTI0YzMwNTJkMjg5OCIsImFjdGlvbiI6IlJFU0VUX1BXIiwiaWF0IjoxMDAwfQ."
  >
    <div>
      <ErrorMessage />
      <Formik
        initialValues={
          Object {
            "loginAfterReset": true,
            "newPassword": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <Form
          id="reset-password-form"
        >
          <form
            action="#"
            id="reset-password-form"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-label-group"
            >
              <Component
                flip={true}
              >
                <label
                  htmlFor="test-reset-password-new-password"
                  key=".1"
                >
                  New Password
                </label>
                <Field
                  autoFocus={true}
                  className="form-control"
                  id="test-reset-password-new-password"
                  key=".0"
                  name="newPassword"
                  placeholder="New Password"
                  required={true}
                  type="password"
                >
                  <input
                    autoFocus={true}
                    className="form-control"
                    id="test-reset-password-new-password"
                    name="newPassword"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="New Password"
                    required={true}
                    type="password"
                    value=""
                  />
                </Field>
              </Component>
            </div>
            <div
              className="custom-control custom-checkbox mb-3 justify-content-between d-flex"
            >
              <Field
                className="custom-control-input"
                id="test-reset-password-login-after-reset"
                name="loginAfterReset"
                type="checkbox"
              >
                <input
                  checked={true}
                  className="custom-control-input"
                  id="test-reset-password-login-after-reset"
                  name="loginAfterReset"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={true}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="test-reset-password-login-after-reset"
              >
                Log in now?
              </label>
            </div>
            <div
              className="custom-control custom-checkbox mb-3 justify-content-between d-flex"
            >
              <Field
                className="custom-control-input"
                id="test-reset-password-stay-logged-in"
                name="stayLoggedIn"
                type="checkbox"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  id="test-reset-password-stay-logged-in"
                  name="stayLoggedIn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="checkbox"
                  value={false}
                />
              </Field>
              <label
                className="custom-control-label"
                htmlFor="test-reset-password-stay-logged-in"
              >
                Remember me
              </label>
            </div>
            <button
              className="btn btn-primary btn-block"
              type="submit"
            >
              Reset Password
            </button>
          </form>
        </Form>
      </Formik>
    </div>
  </Component>
</div>
`;

exports[`<ResetPasswordForm> 2`] = `
<div
  id="client-test-div"
>
  <Component
    allowLoginAfterReset={true}
    idPrefix="test"
    onLogin={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    token="eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJlbWFpbCI6ImJvYkBib2IuY29tIiwiY3JlZGVudGlhbElkIjoiYTMxZDY4ZTYtODk4Zi00OTk4LTllNmQtMjVlZjFhNjJmNjJjIiwiaWQiOiI5MTVjYjNjMC1hM2FjLTQ0YmUtYTJhOC02ZWRiMjViZmVhY2MiLCJhcHBJZCI6IjI0OGU1NDczLWQ5YTYtNDQ4Ny05MTY0LTI0YzMwNTJkMjg5OCIsImFjdGlvbiI6IlJFU0VUX1BXIiwiaWF0IjoxMDAwfQ."
  >
    <div>
      <ErrorMessage />
      <Formik
        initialValues={
          Object {
            "loginAfterReset": true,
            "newPassword": "",
            "stayLoggedIn": false,
          }
        }
        onSubmit={[Function]}
        validate={[Function]}
      >
        <LoginAfterReset
          allowLoginAfterReset={true}
          loginData={
            Object {
              "email": "bob@bob.com",
              "password": "abc123",
              "stayLoggedIn": false,
            }
          }
          onLogin={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          redirectAfterReset={false}
          svcResetPassword={
            Object {
              "svcResetPassword": Object {
                "__typename": "PasswordResetResult",
                "redirectUri": "/fakeuri",
              },
            }
          }
        >
          <div
            className="alert alert-success"
          >
            <ErrorMessage />
            Your password has been reset successfully.
          </div>
        </LoginAfterReset>
      </Formik>
    </div>
  </Component>
</div>
`;

exports[`<ResetPasswordForm> invalid token 1`] = `
<div
  id="client-test-div"
>
  <Component
    token="eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJjcmVkZW50aWFsSWQiOiJhMzFkNjhlNi04OThmLTQ5OTgtOWU2ZC0yNWVmMWE2MmY2MmMiLCJpZCI6IjkxNWNiM2MwLWEzYWMtNDRiZS1hMmE4LTZlZGIyNWJmZWFjYyIsImFwcElkIjoiMjQ4ZTU0NzMtZDlhNi00NDg3LTkxNjQtMjRjMzA1MmQyODk4IiwiYWN0aW9uIjoiUkVTRVRfUFciLCJpYXQiOjEwMDB9."
  >
    <div
      className="alert alert-danger"
    >
      Invalid token 
      <pre>
        eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJjcmVkZW50aWFsSWQiOiJhMzFkNjhlNi04OThmLTQ5OTgtOWU2ZC0yNWVmMWE2MmY2MmMiLCJpZCI6IjkxNWNiM2MwLWEzYWMtNDRiZS1hMmE4LTZlZGIyNWJmZWFjYyIsImFwcElkIjoiMjQ4ZTU0NzMtZDlhNi00NDg3LTkxNjQtMjRjMzA1MmQyODk4IiwiYWN0aW9uIjoiUkVTRVRfUFciLCJpYXQiOjEwMDB9.
      </pre>
    </div>
  </Component>
</div>
`;
